@@ -52,18 +52,68 @@ public final class TreeFeatures {
 
     static {
         FANCY_OAK = register("fancy_oak", Feature.TREE.configure(buildLargeOakTree().build()));
-        FANCY_OAK_BEES_005 = register("fancy_oak_bees_005", Feature.TREE.configure(buildLargeOakTree().decorators(List.of(MORE_BEEHIVES_TREES)).build()));
+        FANCY_OAK_BEES_005 = register("fancy_oak_bees_005",
+                Feature.TREE.configure(buildLargeOakTree()
+                        .decorators(List.of(MORE_BEEHIVES_TREES)).build()));
         OAK = register("oak", Feature.TREE.configure(buildOakTree().build()));
-        OAK_BEES_005 = register("oak_bees_005", Feature.TREE.configure(buildOakTree().decorators(List.of(MORE_BEEHIVES_TREES)).build()));
-        SPRUCE = register("spruce", Feature.TREE.configure((new net.minecraft.world.gen.feature.TreeFeatureConfig.Builder(BlockStateProvider.of(Blocks.SPRUCE_LOG), new StraightTrunkPlacer(5, 2, 1), BlockStateProvider.of(ENCHANTED_SPRUCE_LEAVES), new SpruceFoliagePlacer(UniformIntProvider.create(2, 3), UniformIntProvider.create(0, 2), UniformIntProvider.create(1, 2)), new TwoLayersFeatureSize(2, 0, 2))).ignoreVines().build()));
-        MEGA_SPRUCE = register("mega_spruce", Feature.TREE.configure((new net.minecraft.world.gen.feature.TreeFeatureConfig.Builder(BlockStateProvider.of(Blocks.SPRUCE_LOG), new GiantTrunkPlacer(13, 2, 14), BlockStateProvider.of(ENCHANTED_SPRUCE_LEAVES), new MegaPineFoliagePlacer(ConstantIntProvider.create(0), ConstantIntProvider.create(0), UniformIntProvider.create(13, 17)), new TwoLayersFeatureSize(1, 1, 2))).decorators(ImmutableList.of(new AlterGroundTreeDecorator(BlockStateProvider.of(Blocks.PODZOL)))).build()));
-        MEGA_PINE = register("mega_pine", Feature.TREE.configure((new net.minecraft.world.gen.feature.TreeFeatureConfig.Builder(BlockStateProvider.of(Blocks.SPRUCE_LOG), new GiantTrunkPlacer(13, 2, 14), BlockStateProvider.of(ENCHANTED_SPRUCE_LEAVES), new MegaPineFoliagePlacer(ConstantIntProvider.create(0), ConstantIntProvider.create(0), UniformIntProvider.create(3, 7)), new TwoLayersFeatureSize(1, 1, 2))).decorators(ImmutableList.of(new AlterGroundTreeDecorator(BlockStateProvider.of(Blocks.PODZOL)))).build()));
+        OAK_BEES_005 = register("oak_bees_005",
+                Feature.TREE.configure(buildOakTree()
+                        .decorators(List.of(MORE_BEEHIVES_TREES)).build()));
+        SPRUCE = register("spruce",
+                Feature.TREE.configure((new TreeFeatureConfig.Builder(
+                        BlockStateProvider.of(SPRUCE_LOG),
+                        new StraightTrunkPlacer(5, 2, 1),
+                        BlockStateProvider.of(ENCHANTED_SPRUCE_LEAVES),
+                        new SpruceFoliagePlacer(UniformIntProvider.create(2, 3), UniformIntProvider.create(0, 2), UniformIntProvider.create(1, 2)),
+                        new TwoLayersFeatureSize(2, 0, 2)))
+                        .ignoreVines().build()));
+        MEGA_SPRUCE = register("mega_spruce",
+                Feature.TREE.configure((new TreeFeatureConfig.Builder(
+                        BlockStateProvider.of(SPRUCE_LOG),
+                        new GiantTrunkPlacer(13, 2, 14),
+                        BlockStateProvider.of(ENCHANTED_SPRUCE_LEAVES),
+                        new MegaPineFoliagePlacer(ConstantIntProvider.create(0), ConstantIntProvider.create(0), UniformIntProvider.create(13, 17)),
+                        new TwoLayersFeatureSize(1, 1, 2)))
+                        .decorators(ImmutableList.of(new AlterGroundTreeDecorator(BlockStateProvider.of(PODZOL))))
+                        .build()));
+        MEGA_PINE = register("mega_pine",
+                Feature.TREE.configure((new TreeFeatureConfig.Builder(
+                        BlockStateProvider.of(SPRUCE_LOG),
+                        new GiantTrunkPlacer(13, 2, 14),
+                        BlockStateProvider.of(ENCHANTED_SPRUCE_LEAVES),
+                        new MegaPineFoliagePlacer(ConstantIntProvider.create(0), ConstantIntProvider.create(0), UniformIntProvider.create(3, 7)),
+                        new TwoLayersFeatureSize(1, 1, 2)))
+                        .decorators(ImmutableList.of(new AlterGroundTreeDecorator(BlockStateProvider.of(PODZOL))))
+                        .build()));
         BIRCH = register("birch", Feature.TREE.configure(buildBirchTree().build()));
-        BIRCH_BEES_005 = register("birch_bees_005", Feature.TREE.configure(buildBirchTree().decorators(List.of(MORE_BEEHIVES_TREES)).build()));
-        JUNGLE_TREE_NO_VINE = register("jungle_tree_no_vine", Feature.TREE.configure(buildJungleTree().ignoreVines().build()));
-        MEGA_JUNGLE_TREE = register("mega_jungle_tree", Feature.TREE.configure((new net.minecraft.world.gen.feature.TreeFeatureConfig.Builder(BlockStateProvider.of(Blocks.JUNGLE_LOG), new MegaJungleTrunkPlacer(10, 2, 19), BlockStateProvider.of(ENCHANTED_JUNGLE_LEAVES), new JungleFoliagePlacer(ConstantIntProvider.create(2), ConstantIntProvider.create(0), 2), new TwoLayersFeatureSize(1, 1, 2))).decorators(ImmutableList.of(TrunkVineTreeDecorator.INSTANCE, LeavesVineTreeDecorator.INSTANCE)).build()));
-        ACACIA = register("acacia", Feature.TREE.configure((new net.minecraft.world.gen.feature.TreeFeatureConfig.Builder(BlockStateProvider.of(Blocks.ACACIA_LOG), new ForkingTrunkPlacer(5, 2, 2), BlockStateProvider.of(ENCHANTED_ACACIA_LEAVES), new AcaciaFoliagePlacer(ConstantIntProvider.create(2), ConstantIntProvider.create(0)), new TwoLayersFeatureSize(1, 0, 2))).ignoreVines().build()));
-        DARK_OAK = register("dark_oak", Feature.TREE.configure((new net.minecraft.world.gen.feature.TreeFeatureConfig.Builder(BlockStateProvider.of(Blocks.DARK_OAK_LOG), new DarkOakTrunkPlacer(6, 2, 1), BlockStateProvider.of(ENCHANTED_DARK_OAK_LEAVES), new DarkOakFoliagePlacer(ConstantIntProvider.create(0), ConstantIntProvider.create(0)), new ThreeLayersFeatureSize(1, 1, 0, 1, 2, OptionalInt.empty()))).ignoreVines().build()));
+        BIRCH_BEES_005 = register("birch_bees_005",
+                Feature.TREE.configure(buildBirchTree().decorators(List.of(MORE_BEEHIVES_TREES)).build()));
+        JUNGLE_TREE_NO_VINE = register("jungle_tree_no_vine",
+                Feature.TREE.configure(buildJungleTree().ignoreVines().build()));
+        MEGA_JUNGLE_TREE = register("mega_jungle_tree",
+                Feature.TREE.configure((new TreeFeatureConfig.Builder(
+                        BlockStateProvider.of(JUNGLE_LOG),
+                        new MegaJungleTrunkPlacer(10, 2, 19),
+                        BlockStateProvider.of(ENCHANTED_JUNGLE_LEAVES),
+                        new JungleFoliagePlacer(ConstantIntProvider.create(2), ConstantIntProvider.create(0), 2),
+                        new TwoLayersFeatureSize(1, 1, 2)))
+                        .decorators(ImmutableList.of(TrunkVineTreeDecorator.INSTANCE, LeavesVineTreeDecorator.INSTANCE))
+                        .build()));
+        ACACIA = register("acacia",
+                Feature.TREE.configure((new TreeFeatureConfig.Builder(
+                        BlockStateProvider.of(ACACIA_LOG),
+                        new ForkingTrunkPlacer(5, 2, 2),
+                        BlockStateProvider.of(ENCHANTED_ACACIA_LEAVES),
+                        new AcaciaFoliagePlacer(ConstantIntProvider.create(2), ConstantIntProvider.create(0)), new TwoLayersFeatureSize(1, 0, 2)))
+                        .ignoreVines().build()));
+        DARK_OAK = register("dark_oak",
+                Feature.TREE.configure((new TreeFeatureConfig.Builder(
+                        BlockStateProvider.of(DARK_OAK_LOG),
+                        new DarkOakTrunkPlacer(6, 2, 1),
+                        BlockStateProvider.of(ENCHANTED_DARK_OAK_LEAVES),
+                        new DarkOakFoliagePlacer(ConstantIntProvider.create(0), ConstantIntProvider.create(0)),
+                        new ThreeLayersFeatureSize(1, 1, 0, 1, 2, OptionalInt.empty())))
+                        .ignoreVines().build()));
     }
 
     static final class Constants {
@@ -122,23 +172,36 @@ public final class TreeFeatures {
         public static final BeehiveTreeDecorator MORE_BEEHIVES_TREES = new BeehiveTreeDecorator(0.05F);
     }
 
-    private static net.minecraft.world.gen.feature.TreeFeatureConfig.Builder buildLargeOakTree() {
-        return (new net.minecraft.world.gen.feature.TreeFeatureConfig.Builder(BlockStateProvider.of(Blocks.OAK_LOG), new LargeOakTrunkPlacer(3, 11, 0), BlockStateProvider.of(ENCHANTED_OAK_LEAVES), new LargeOakFoliagePlacer(ConstantIntProvider.create(2), ConstantIntProvider.create(4), 4), new TwoLayersFeatureSize(0, 0, 0, OptionalInt.of(4)))).ignoreVines();
+    private static TreeFeatureConfig.Builder buildLargeOakTree() {
+        return (new TreeFeatureConfig.Builder(
+                BlockStateProvider.of(Blocks.OAK_LOG),
+                new LargeOakTrunkPlacer(3, 11, 0),
+                BlockStateProvider.of(ENCHANTED_OAK_LEAVES),
+                new LargeOakFoliagePlacer(ConstantIntProvider.create(2), ConstantIntProvider.create(4), 4),
+                new TwoLayersFeatureSize(0, 0, 0, OptionalInt.of(4))))
+                .ignoreVines();
     }
 
-    private static net.minecraft.world.gen.feature.TreeFeatureConfig.Builder buildTree(Block trunkBlock, BlockState foliageBlock, int baseHeight, int firstRandomHeight) {
-        return new net.minecraft.world.gen.feature.TreeFeatureConfig.Builder(BlockStateProvider.of(trunkBlock), new StraightTrunkPlacer(baseHeight, firstRandomHeight, 0), BlockStateProvider.of(foliageBlock), new BlobFoliagePlacer(ConstantIntProvider.create(2), ConstantIntProvider.create(0), 3), new TwoLayersFeatureSize(1, 0, 1));
+    private static TreeFeatureConfig.Builder buildTree(Block trunkBlock, BlockState foliageBlock, int baseHeight, int firstRandomHeight) {
+        return new TreeFeatureConfig.Builder(
+                BlockStateProvider.of(trunkBlock),
+                new StraightTrunkPlacer(baseHeight, firstRandomHeight, 0),
+                BlockStateProvider.of(foliageBlock),
+                new BlobFoliagePlacer(ConstantIntProvider.create(2), ConstantIntProvider.create(0), 3),
+                new TwoLayersFeatureSize(1, 0, 1));
     }
 
-    private static net.minecraft.world.gen.feature.TreeFeatureConfig.Builder buildOakTree() {
-        return buildTree(Blocks.OAK_LOG, ENCHANTED_OAK_LEAVES, 4, 2).ignoreVines();
+    private static TreeFeatureConfig.Builder buildOakTree() {
+        return buildTree(Blocks.OAK_LOG, ENCHANTED_OAK_LEAVES, 4, 2)
+                .ignoreVines();
     }
 
-    private static net.minecraft.world.gen.feature.TreeFeatureConfig.Builder buildBirchTree() {
-        return buildTree(Blocks.BIRCH_LOG, ENCHANTED_BIRCH_LEAVES, 5, 2).ignoreVines();
+    private static TreeFeatureConfig.Builder buildBirchTree() {
+        return buildTree(Blocks.BIRCH_LOG, ENCHANTED_BIRCH_LEAVES, 5, 2)
+                .ignoreVines();
     }
 
-    private static net.minecraft.world.gen.feature.TreeFeatureConfig.Builder buildJungleTree() {
+    private static TreeFeatureConfig.Builder buildJungleTree() {
         return buildTree(Blocks.JUNGLE_LOG, ENCHANTED_JUNGLE_LEAVES, 4, 8);
     }
 }
